# xi-agent

./: .gitignore  .structural-review  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  TAU-REVIEW.md  TEST.md  THIRD_PARTY_NOTICES.md
.github/workflows/: rust.yml
.plans/: 01-mark-log-dirty-dedup.md  02-remove-dead-code.md  03-system-prompt-single-owner.md  04-thinking-support-dedup.md  05-provider-format-shared-traversal.md  06-context-window-module.md  07-extract-key-handlers.md  08-decompose-app-god-object.md
docs/: 03-thinking-selection.md  ARCHITECTURE.md  CONFIG.md  GLOSSARY.md  HOOKS.md  PROVIDER-MODEL-SPEC.md  ROADMAP.md  THEME.md  UI-LAYOUT-SPEC.md  USER-INTERFACE-SPEC.md
docs/features/: 01-autodetect-utf8.md  02-format-output.md  03-lazy-print-empty-lines.md
docs/issues/: 01-codex-auth-broken.md
docs/plans/: 2026-03-14-agent-loop-design.md  2026-03-14-agent-loop-impl.md  2026-03-14-ask-user-tool.md  2026-03-14-chat-tui-design.md  2026-03-14-config-file.md  2026-03-14-context-management.md  2026-03-14-llm-backend-design.md  2026-03-14-openai-provider-design.md  2026-03-14-poc-cleanup.md  2026-03-14-provider-auth.md  2026-03-14-tests.md  2026-03-14-thinking-output-design.md  2026-03-14-tool-confirmation.md  2026-03-15-auth-tests-plan.md  2026-03-15-docs-cleanup-plan.md  2026-03-15-provider-auth-redesign-design.md  2026-03-15-provider-auth-redesign-impl.md  2026-03-17-output-phase-events-plan.md  2026-03-17-steering-queue-plan.md  2026-03-18-context-window-utilization-plan.md  2026-03-20-ui-layout-tests-plan.md  2026-03-22-agent-cancellation.md  2026-03-22-config-validation.md  2026-03-22-llm-provider-abstraction.md  2026-03-22-provider-model-metadata.md  2026-03-22-typed-tool-args.md  2026-03-24-proactive-auth-refresh-plan.md  2026-03-25-shell-input-mode-plan.md  2026-03-27-custom-tools-plan.md  2026-03-27-run-interactive-brainstorm.md  2026-03-28-external-file-change-notification.md  2026-03-30-show-user-feature-spec.md  2026-03-31-tool-output-truncation.md  2026-04-05-markdown-rendering-plan.md  2026-04-11-issue-30-named-provider-instances.md  2026-04-18-issue-26-explicit-steering-interruption.md  2026-04-18-issue-41-event-log-cleanup-plan.md  2026-04-18-session-state-and-projection-simplification-plan.md  2026-04-22-issue-45-unify-llm-serialization-plan.md  2026-04-24-issue-44-app-decomposition-plan.md  (+10 more)
scripts/: Containerfile.build-windows  build_windows.sh
src/: agent_runtime.rs  agent_turn_state.rs  agents.rs  app.rs  app_agent_handlers.rs  app_event.rs  app_interaction.rs  app_submission.rs  ask_user_state.rs  at_file.rs  atomic_file.rs  clipboard.rs  commands.rs  completion.rs  completion_state.rs  config.rs  context_window.rs  debug_log.rs  dirs.rs  event_log.rs  export.rs  hook_ipc.rs  hooks.rs  input.rs  keybindings.rs  live_turn.rs  log_view_state.rs  login_state.rs  main.rs  markdown.rs  migrate.rs  mouse_select.rs  process.rs  projection.rs  provider.rs  provider_instance.rs  provider_manager.rs  selection_state.rs  session.rs  session_event.rs  (+11 more)
src/agent/: compaction.rs  file_tracker.rs  mod.rs  system_prompt.rs  tests.rs  tool_output_log.rs  types.rs
src/agent/tools/: ask_user.rs  bash.rs  cmd.rs  custom.rs  edit.rs  exec.rs  find.rs  mod.rs  powershell.rs  python.rs  read.rs  read_skill.rs  subprocess.rs  terminal.rs  truncate.rs  utf8.rs  write.rs
src/auth/: backend.rs  codex.rs  copilot.rs  gemini.rs  mock.rs  mod.rs  open_url.rs  paths.rs  store.rs  types.rs
src/commands/: mod.rs
src/llm/: anthropic.rs  codex.rs  common.rs  copilot.rs  error.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  provider_format.rs  test_provider.rs
src/ui/: info.rs  input.rs  layout.rs  log.rs  login.rs  menu.rs  pending.rs  status.rs
tools/: hook_ipc_logger.py
