[package]
name = "pirs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3.32"
ratatui = "0.29"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
textwrap = "0.16"
ignore = "0.4"
globset = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
tui-textarea = { version = "0.7", default-features = false, features = ["crossterm"] }
unicode-width = "0.2"
