[package]
name = "tau"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }
async-stream = "0.3"
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util = "0.3.32"
ratatui = "0.30"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
textwrap = "0.16"
ignore = "0.4"
globset = "0.4"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util", "net"] }
ratatui-textarea = { version = "0.8", default-features = false, features = ["crossterm"] }
unicode-width = "0.2"
directories = "5.0"
base64 = "0.22"
sha2 = "0.10"
similar = "2"
getrandom = "0.2"
urlencoding = "2.1"
log = { version = "0.4", features = ["std"] }
toml = { version = "0.8", features = ["parse"] }
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
pulldown-cmark = "0.13"
ammonia = "4.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
] }

[dev-dependencies]
tempfile = "3"
